Fixed the alignment of the homepage

--- a/docroot/css/ojudge.css
+++ b/docroot/css/ojudge.css
@@ -79,7 +79,7 @@ body {
 }
 
 .maincontent {
-  min-height: calc(100vh);
+  min-height: calc(90vh);
   margin-bottom: -1px;
 }
 
